[package]
edition      = "2024"
name         = "tropic-esp32"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "tropic-esp32"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c6"] }

tropic01 = { git = "https://github.com/tropicsquare/libtropic-rs.git", rev = "8239c1acb3cce65445433b1dbb73f72da6227342" }
embedded-hal-bus = "0.3.0"
x25519-dalek = { version = "2.0.1", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
nom-derive = { git = "https://github.com/rust-bakery/nom-derive.git", rev = "f68f464f50f7162483355e61a50ec2a7dae8044f" }
